@@ -1,41 +1,0 @@
-Function: znchareval
-Section: number_theoretical
-C-Name: znchareval
-Prototype: GGGDG
-Help: znchareval(bid,chi, n, {z})):
-Doc: Let \var{bid} be attached to $G = (\Z/q\Z)^*$ (as per \kbd{bid =
- idealstar(,q)}) and let $n$ an integer. The Dirichlet
- character \var{chi} is given in one of the usual 3 formats: a \typ{VEC} in
- terms of \kbd{bid.gen}, a \typ{COL} in terms of the Conrey generators, or a
- \typ{INT} (Conrey label); see \kbd{??znconreylog} and \kbd{??znconreychar}.
- This function returns the value of \var{chi} at $n$. This is encoded as
- follows, depending on the optional argument $z$.
-
- Let $K$ be some field. Recall that if $G$ is abelian, $\chi: G \to K^*$ is
- a character of finite order, $o$ is a multiple of the character
- order and $\zeta \in K^*$ has multiplicative order $o$, then $\chi(n) =
- \zeta^{c(n)}$ for some unique morphism $c: (G,\times) \to (\Z/o\Z,+)$.
- Our usual convention is to write
- $G = (\Z/o_1\Z) g_1 \oplus \cdots \oplus (\Z/o_d\Z) g_d$ for some generators
- $(g_i)$ of respective order $d_i$, where the group has exponent $o :=
- \text{lcm}_i o_i$. Since $\zeta^o = 1$, the vector $(c_i)$ in $\prod
- (\Z/o_i\Z)$ defines a character $\chi$ on $G$ via $\chi(g_i) = \zeta^{c_i
- (o/o_i)}$ for all $i$. Classical Dirichlet characters have values in $\C$
- and we can take $\zeta = \exp(2i\pi/o)$.
-
- \item If $z$ is omitted: return the rational number $c(n)/o$ for $n$ coprime
- to $q$, where we normalize $0\leq c(n) < o$. If $n$ is not coprime to $q$
- we return the sentinel value $-1$.
-
- \item If $z$ is an integer $o$, then we assume that $o$ is a multiple of the
- character order and we return the integer $c(n)$ when $n$ is coprime to $q$
- and $-1$ otherwise.
-
- \item $z$ can be of the form $[\var{zeta}, o]$, where \var{zeta}
- is an $o$-th root of $1$ and $o$ is a multiple of the character order.
- We return $\zeta^{c(n)}$.
-
- \item Finally, $z$ can be of the form $[\var{vzeta}, o]$, where
- \var{vzeta} is a vector of powers $\zeta^0, \dots, \zeta^{o-1}$
- of some $o$-th root of $1$ and $o$ is a multiple of the character order.
- As above, we return $\zeta^{c(n)}$ after a table lookup.
