@@ -1565,13 +1565,14 @@ long    Zp_issquare(GEN a, GEN p);
 GEN     bestappr(GEN x, GEN k);
 GEN     bestapprPade(GEN x, long B);
 long    cgcd(long a,long b);
+GEN     chareval(GEN G, GEN chi, GEN n, GEN z);
 GEN     chinese(GEN x, GEN y);
 GEN     chinese1(GEN x);
 GEN     chinese1_coprime_Z(GEN x);
 GEN     classno(GEN x);
 GEN     classno2(GEN x);
 long    clcm(long a,long b);
-GEN     conrey_normalize(GEN m, GEN cyc);
+GEN     conrey_normalize(GEN G, GEN m);
 GEN     contfrac0(GEN x, GEN b, long flag);
 GEN     contfracpnqn(GEN x, long n);
 GEN     fibo(long n);
@@ -1632,6 +1633,7 @@ long    uissquareall(ulong A, ulong *sqrtA);
 long    unegisfundamental(ulong x);
 long    uposisfundamental(ulong x);
 GEN     znchareval(GEN G, GEN chi, GEN n, GEN z);
+GEN     znconrey_normalized(GEN G, GEN chi);
 GEN     znconreychar(GEN bid, GEN m);
 GEN     znconreyfromchar_normalized(GEN bid, GEN chi);
 GEN     znconreyconductor(GEN bid, GEN co, GEN *pm);
