@@ -40,7 +40,18 @@
 0.99197791640852265169404803750682485965 + 0.1264112865127400184730959576238
 0269655*I
 1
+[[1, 0; 0, 1], [0, 0]]
+[[7, 0; 0, 7], [1, 1]]
+3
+1/3
+6
+0
+-1
+1/2
+  ***   at top-level: chareval(1,chi,1)
+  ***                 ^-----------------
+  *** chareval: incorrect type in chareval (t_INT).
 1
 [4, [2, 2], [[3, 1; 0, 1], [114, 1; 0, 1]]]
 [[1, 0, 0; 0, 1, 0; 0, 0, 1], [0]]
-Total time spent: 32
+Total time spent: 24
