@@ -75,6 +75,16 @@ _MAT).")
 [1, 1]
 [16, 1]
 [12, 1]
+10
+0
+-1
+-1
+9/10
+1
+2
+x
+x^2
+1
 [16, 1]
 [1, 16]~
 [1, 16]~
@@ -121,4 +131,4 @@ _MAT).")
 1
 1
 []~
-Total time spent: 1280
+Total time spent: 1268
