@@ -79,7 +79,19 @@ G=idealstar(,75);
 znconreychar(G,1)
 znconreychar(G,2)
 znconreychar(G,11)
-znconreychar(G,71)
+chi=znconreychar(G,71)
+charorder(G,chi)
+chareval(G,chi,1)
+chareval(G,chi,5)
+chareval(G,chi,1/3)
+chareval(G,chi,7/2)
+chareval(G,chi,2, 10)
+chareval(G,chi,2, 20)
+chareval(G,chi,2, [x,10])
+chareval(G,chi,2, [x,20])
+chareval(G,chi,2, [vector(10,i,i), 10])
+
+
 log11 = ideallog(, 11, G);
 znconreychar(G,log11)
 znconreylog(G,log11)
